# mauderbox

./: .biomeignore  .gitignore  AUTOUPDATER_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SECRETS_ANLEITUNG.md  README.md  package.json  voicebox-server.spec
.github/workflows/: release.yml
app/: .biomeignore  index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  router.tsx
app/src/components/: ShinyText.tsx  Sidebar.tsx  TitleBarDragRegion.tsx
app/src/components/AppFrame/: AppFrame.tsx
app/src/components/AudioPlayer/: AudioPlayer.tsx
app/src/components/Generation/: FloatingGenerateBox.tsx  GenerationForm.tsx  GenerationProgress.tsx  TextInputModal.tsx
app/src/components/ui/: badge.tsx  (+13 more)
app/src/lib/: appInit.tsx  queryClient.ts  queryKeys.ts  tauri.ts
app/src/stores/: activeTasksStore.ts  serverStore.ts  uiStore.ts
backend/: README.md  build_binary.py  example_usage.py  main.py  models.py  profiles.py  prompt_enhancer.py  requirements.txt  test_flash_attn.py  transcribe.py  tts.py  voicebox-server.spec
backend/data/: voicebox.db
backend/utils/: cache.py  progress.py  tasks.py
docs/: TROUBLESHOOTING.md
landing/: package.json
tauri/: index.html  package.json  vite.config.ts
tauri/src/: main.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/backend-pkg/: database.py  history.py  prompt_enhancer.py  requirements.txt  server.py  transcribe.py  tts.py
tauri/src-tauri/backend-pkg/utils/: audio.py  cache.py  tasks.py
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: audio_output.rs  main.rs
(+41 files in other folders)
